package in_myfiles.creational_pattern.factory_method

class SizeComparator(private val isAscending: Boolean) : Comparator<FileInfo> {
    override fun compare(f1: FileInfo, f2: FileInfo): Int {
        val ret = f1.size.compareTo(f2.size)
        return if (isAscending) ret else -ret
    }
}